# CPU

./: .gitignore  CMakeLists.txt  README.md  main  main.cc
include/: cpu_info.h  gpu_info.h  memory_info.h  network_info.h  process_info.h  tui_display.h
src/: cpu_info.cpp  gpu_info.cpp  main.cpp  memory_info.cpp  network_info.cpp  process_info.cpp  tui_display.cpp
